--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+title: Hacker theme
+description: Hacker is a theme for GitHub Pages.
 theme: jekyll-theme-hacker
+gem "github-pages", group: :jekyll_plugins
