--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://manjulsolanke.github.io/manjulsolanke.github.io",
+  "homepage": "https://manjulsolanke.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
