--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,10 @@ jobs:
         run: npm ci
       - name: Build with Vite
         run: npm run build
+      - name: Add 404.html for SPA routing
+        run: |
+          cp public/404.html dist/404.html
+          cp public/_redirects dist/_redirects
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
